--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
 <dependency>
     <groupId>jakarta.servlet</groupId>
     <artifactId>jakarta.servlet-api</artifactId>
-    <version>6.0.0</version>
-    <scope>provided</scope>
+    <version>5.0.0</version>
+    <scope>test</scope>
 </dependency>
   </dependencies>
   <build>
